fix canvas scaling by pixel ratio, add overflow-x hidden to header-content-holder

--- a/style.css
+++ b/style.css
@@ -279,6 +279,7 @@ header {
     position: relative;
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
 }
 
 header .header-content {
